# LipRec

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
include/rqt_liprec/: Clustering.h  CommonData.h  CommonEnums.h  Dtw.h  ImageProcessing.h  KeyPointsDeliverer.h  LipRec.h  LipRec.h.autosave  LipRecRecorder.h  Swt.h  TrajectoriesDataManager.h  ZernikeMoments.h
msg/: PointCloud.msg
scripts/: rqt_liprec
src/: LipRec.cpp
src/rqt_liprec/: Clustering.cpp  Dtw.cpp  ImageProcessing.cpp  KeyPointsDeliverer.cpp  LipRec.cpp  LipRecRecorder.cpp  Swt.cpp  TrajectoriesDataManager.cpp  ZernikeMoments.cpp  analyzeRecResult.py  analyzeRecResult.py~  liprec.ui  liprec.ui.autosave
utter/grasp close/: 01_utter.txt  02_utter.txt  03_utter.txt  04_utter.txt  05_utter.txt  06_utter.txt  07_utter.txt  08_utter.txt  09_utter.txt  10_utter.txt  11_utter.txt  12_utter.txt  13_utter.txt  14_utter.txt  15_utter.txt  16_utter.txt  17_utter.txt  18_utter.txt  19_utter.txt  20_utter.txt  21_utter.txt  22_utter.txt  23_utter.txt  24_utter.txt  25_utter.txt  26_utter.txt  27_utter.txt  28_utter.txt  29_utter.txt  30_utter.txt  31_utter.txt  32_utter.txt  33_utter.txt  34_utter.txt  35_utter.txt  36_utter.txt  37_utter.txt  38_utter.txt  39_utter.txt  40_utter.txt  (+10 more)
utter/grasp open/: 01_utter.txt  02_utter.txt  03_utter.txt  04_utter.txt  05_utter.txt  06_utter.txt  07_utter.txt  08_utter.txt  09_utter.txt  10_utter.txt  11_utter.txt  12_utter.txt  13_utter.txt  14_utter.txt  15_utter.txt  16_utter.txt  17_utter.txt  18_utter.txt  19_utter.txt  20_utter.txt  21_utter.txt  22_utter.txt  23_utter.txt  24_utter.txt  25_utter.txt  26_utter.txt  27_utter.txt  28_utter.txt  29_utter.txt  30_utter.txt  31_utter.txt  32_utter.txt  33_utter.txt  34_utter.txt  35_utter.txt  36_utter.txt  37_utter.txt  38_utter.txt  39_utter.txt  40_utter.txt  (+10 more)
utter/look backward/: 01_utter.txt  02_utter.txt  03_utter.txt  04_utter.txt  05_utter.txt  06_utter.txt  07_utter.txt  08_utter.txt  09_utter.txt  10_utter.txt  11_utter.txt  12_utter.txt  13_utter.txt  14_utter.txt  15_utter.txt  16_utter.txt  17_utter.txt  18_utter.txt  19_utter.txt  20_utter.txt  21_utter.txt  22_utter.txt  23_utter.txt  24_utter.txt  25_utter.txt  26_utter.txt  27_utter.txt  28_utter.txt  29_utter.txt  30_utter.txt  31_utter.txt  32_utter.txt  33_utter.txt  34_utter.txt  35_utter.txt  36_utter.txt  37_utter.txt  38_utter.txt  39_utter.txt  40_utter.txt  (+10 more)
utter/look forward/: 01_utter.txt  02_utter.txt  03_utter.txt  04_utter.txt  05_utter.txt  06_utter.txt  07_utter.txt  08_utter.txt  09_utter.txt  10_utter.txt  11_utter.txt  12_utter.txt  13_utter.txt  14_utter.txt  15_utter.txt  16_utter.txt  17_utter.txt  18_utter.txt  19_utter.txt  20_utter.txt  21_utter.txt  22_utter.txt  23_utter.txt  24_utter.txt  25_utter.txt  26_utter.txt  27_utter.txt  28_utter.txt  29_utter.txt  30_utter.txt  31_utter.txt  32_utter.txt  33_utter.txt  34_utter.txt  35_utter.txt  36_utter.txt  37_utter.txt  38_utter.txt  39_utter.txt  40_utter.txt  (+10 more)
utter/look left/: 01_utter.txt  02_utter.txt  03_utter.txt  04_utter.txt  05_utter.txt  06_utter.txt  07_utter.txt  08_utter.txt  09_utter.txt  10_utter.txt  11_utter.txt  12_utter.txt  13_utter.txt  14_utter.txt  15_utter.txt  16_utter.txt  17_utter.txt  18_utter.txt  19_utter.txt  20_utter.txt  21_utter.txt  22_utter.txt  23_utter.txt  24_utter.txt  25_utter.txt  26_utter.txt  27_utter.txt  28_utter.txt  29_utter.txt  30_utter.txt  31_utter.txt  32_utter.txt  33_utter.txt  34_utter.txt  35_utter.txt  36_utter.txt  37_utter.txt  38_utter.txt  39_utter.txt  40_utter.txt  (+10 more)
utter/look right/: 01_utter.txt  02_utter.txt  03_utter.txt  04_utter.txt  05_utter.txt  06_utter.txt  07_utter.txt  08_utter.txt  09_utter.txt  10_utter.txt  11_utter.txt  12_utter.txt  13_utter.txt  14_utter.txt  15_utter.txt  16_utter.txt  17_utter.txt  18_utter.txt  19_utter.txt  20_utter.txt  21_utter.txt  22_utter.txt  23_utter.txt  24_utter.txt  25_utter.txt  26_utter.txt  27_utter.txt  28_utter.txt  29_utter.txt  30_utter.txt  31_utter.txt  32_utter.txt  33_utter.txt  34_utter.txt  35_utter.txt  36_utter.txt  37_utter.txt  38_utter.txt  39_utter.txt  40_utter.txt  (+10 more)
utter/move backward/: 01_utter.txt  02_utter.txt  03_utter.txt  04_utter.txt  05_utter.txt  06_utter.txt  07_utter.txt  08_utter.txt  09_utter.txt  10_utter.txt  11_utter.txt  12_utter.txt  13_utter.txt  14_utter.txt  15_utter.txt  16_utter.txt  17_utter.txt  18_utter.txt  19_utter.txt  20_utter.txt  21_utter.txt  22_utter.txt  23_utter.txt  24_utter.txt  25_utter.txt  26_utter.txt  27_utter.txt  28_utter.txt  29_utter.txt  30_utter.txt  31_utter.txt  32_utter.txt  33_utter.txt  34_utter.txt  35_utter.txt  36_utter.txt  37_utter.txt  38_utter.txt  39_utter.txt  40_utter.txt  (+10 more)
utter/move fast/: 01_utter.txt  02_utter.txt  03_utter.txt  04_utter.txt  05_utter.txt  06_utter.txt  07_utter.txt  08_utter.txt  09_utter.txt  10_utter.txt  11_utter.txt  12_utter.txt  13_utter.txt  14_utter.txt  15_utter.txt  16_utter.txt  17_utter.txt  18_utter.txt  19_utter.txt  20_utter.txt  21_utter.txt  22_utter.txt  23_utter.txt  24_utter.txt  25_utter.txt  26_utter.txt  27_utter.txt  28_utter.txt  29_utter.txt  30_utter.txt  31_utter.txt  32_utter.txt  33_utter.txt  34_utter.txt  35_utter.txt  36_utter.txt  37_utter.txt  38_utter.txt  39_utter.txt  40_utter.txt  (+10 more)
utter/move forward/: 01_utter.txt  02_utter.txt  03_utter.txt  04_utter.txt  05_utter.txt  06_utter.txt  07_utter.txt  08_utter.txt  09_utter.txt  10_utter.txt  11_utter.txt  12_utter.txt  13_utter.txt  14_utter.txt  15_utter.txt  16_utter.txt  17_utter.txt  18_utter.txt  19_utter.txt  20_utter.txt  21_utter.txt  22_utter.txt  23_utter.txt  24_utter.txt  25_utter.txt  26_utter.txt  27_utter.txt  28_utter.txt  29_utter.txt  30_utter.txt  31_utter.txt  32_utter.txt  33_utter.txt  34_utter.txt  35_utter.txt  36_utter.txt  37_utter.txt  38_utter.txt  39_utter.txt  40_utter.txt  (+10 more)
utter/move slow/: 01_utter.txt  02_utter.txt  03_utter.txt  04_utter.txt  05_utter.txt  06_utter.txt  07_utter.txt  08_utter.txt  09_utter.txt  10_utter.txt  (+40 more)
(+350 files in other folders)
